--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,11 @@ cmake_minimum_required(VERSION 2.6)
 project(raytracing)
 set(ROOT "${CMAKE_CURRENT_LIST_DIR}")
 
+if(UNIX)
+  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC")
+  set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fPIC")
+endif()
+
 # Prepare the build environment
 option(USE_SOLUTION "Use solution"  OFF)
 # Add your project files
